--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,23 @@
   src: url('../public/Bartex.ttf') format('truetype');
 }
 
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 html {
   background-color:#e0218a;
 }
 
 body {
-  margin: 1;
-  max-width: 100vw;
+  width: 100vw;
   font-family: 'Bartex', sans-serif;
 }
 
@@ -41,8 +51,7 @@ code {
 #pageContainer {
   display: flex;
   width: 100%;
-  max-width: 100vw;
-  height: 98vh;
+  height: 100vh;
 }
 
 #blocklyDiv {
